# Prepmate-AI-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  check_state.py  compose.yaml  fix_db.py  main.py  pyproject.toml  requirements.txt  test_endpoints.py  test_get_state.py
Interview_Preparation_Agent/: agent.py  agent_node.py  agent_state.py
agents/: Job_search_agent.py  Job_search_agent_node.py  Job_search_agent_state.py  career_roadmap_agent.py  career_roadmap_agent_node.py  career_roadmap_agent_state.py  resume_JD_analysis_agent.py  resume_JD_analysis_agent_node.py  resume_JD_analysis_agent_state.py  resume_analysis_agent.py  resume_analysis_agent_node.py  resume_analysis_agent_state.py
prompts/: JD_analysis.py  Q_generation_prompt.py  career_roadmap_prompt.py  report_prompt.py  resume_JD_analysis_prompt.py  resume_analysis.py
router/: Oauth.py  Oauth_callback.py  create_interview.py  get_interview_details.py  get_interview_history.py  get_interview_question.py  get_resume_analysis.py  get_user_status.py  job_search.py  post_question_answer.py  resume_delete.py  resume_upload.py  road_map.py  send_answer.py  user_delete.py
service/: database.py  database_operations.py  database_schema.py  jwt_token.py  models.py  request_schema.py  supabase_init.py  vectorstore.py
utils/: fetch_jobs.py  get_resume_txt_DB.py  pdf_txt.py
