[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "dotenv>=0.9.9",
    "fastapi>=0.137.1",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-vertexai>=3.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.3",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
